@startuml

    !include ../lexakai/lexakai.theme

    title "com.telenav.lexakai.application"

    abstract BaseRepeater
    abstract BaseLexakaiDiagram

    interface Named

    BaseRepeater <|-- BaseLexakaiDiagram
    abstract class BaseLexakaiDiagram
    {
        --
        +String uml(String title)
        #void onUml(IndentingStringBuilder)
    }

    Application <|-- Lexakai
    class Lexakai
    {
        --(constructors)--
        #Lexakai()
        --
        +void main(String[] arguments)
    }

    BaseLexakaiDiagram <|-- LexakaiClassDiagram
    Named <|-- LexakaiClassDiagram
    class LexakaiClassDiagram
    {
        --(constructors)--
        +LexakaiClassDiagram(LexakaiProject, String)
        --
        +boolean automaticMethodGroups()
        +boolean has(UmlInheritance)
        +LexakaiProject project()
        +Set<String> qualifiedTypeNames()
        +Referent referent(Type referent)
        +String title()
        --(checks)--
        +boolean isPackageDiagram()
        --(collection)--
        +HashSet<String> abstractSuperClasses()
        +boolean add(UmlInheritance)
        +List<MethodDeclaration> includedMethods(TypeDeclaration<?>)
        +List<UmlType> includedQualifiedTypes()
        +boolean isEmpty()
        +HashSet<Object> superInterfaces()
        --(filtering)--
        +void include(UmlType)
        +boolean includeMembers(TypeDeclaration<?>)
        +boolean includeOverrides(TypeDeclaration<?>)
        +void includedMethods(TypeDeclaration<?>, Consumer<MethodDeclaration>)
        --(identity)--
        +String identifier()
        --(naming)--
        +boolean includesQualifiedTypeName(String typeName)
    }

    BaseRepeater <|-- LexakaiProject
    LexakaiProject --> LexakaiProject : "creates"
    class LexakaiProject
    {
        --(constructors)--
        +LexakaiProject(Lexakai, Version, Folder, Folder, JavaParser)
        --
        +boolean automaticMethodGroups()
        +LexakaiProject automaticMethodGroups(boolean automaticMethodGroups)
        +void diagramNames(Consumer<String>)
        +void diagrams(Consumer<LexakaiClassDiagram>)
        +LexakaiProject javadocSectionPattern(Pattern)
        +String property(String key)
        +void typeDeclarations(Consumer<TypeDeclaration<?>>)
        --(building)--
        +LexakaiProject buildPackageDiagrams(boolean packageDiagrams)
        +boolean buildPackageDiagrams()
        --(checks)--
        +boolean hasChildProjects()
        +boolean hasSourceCode()
        --(collection)--
        +LexakaiProject addHtmlAnchors(boolean addHtmlAnchors)
        +VariableMap<String> properties()
        +List<TypeDeclaration<?>> types()
        --(filesystem)--
        +List<Folder> childProjects()
        +Folder diagramFolder()
        +Folder documentationFolder()
        +Folder folder()
        +Folder imagesFolder()
        +File readmeFile()
        +Folder sourceFolder()
        --(filtering)--
        +LexakaiProject includeObjectMethods(boolean include)
        +boolean includeObjectMethods()
        +LexakaiProject includeProtectedMethods(Boolean include)
        +boolean includeProtectedMethods()
        --(identity)--
        +Version version()
        --(lifecycle)--
        +void initialize()
        --(naming)--
        +String name()
        --(read)--
        +void updateReadMe()
    }

    class LexakaiClassDiagram.Referent
    {
        --(constructors)--
        +Referent(String, Type)
        --
        +String cardinality()
        +Type referent()
    }

@enduml

